Various fixes found after release
Fix added for soungs skipping in playlist

Fix for add song button able to add song multiple times

Made song adder into a form

Fixed song list overflowing on bottom of page

--- a/resources/sass/style.sass
+++ b/resources/sass/style.sass
@@ -145,6 +145,7 @@ button
   border-radius: 2px
   box-shadow: inset 0 -1px 2px $color-light-shadow
   display: flex
+  flex-direction: row
   text-align: center
   padding: 0
   &>div
@@ -502,13 +503,14 @@ button
   background: $color-2
   box-shadow: inset 0 1px 1px rgba(255, 255, 255, 0.5)
   margin: 0.5em 0.5em 0 0.5em
-  &>#songs
-    background-color: $color-3
-    max-height: calc(100% - 3em)
-    overflow-x: visible
-    overflow-y: auto
-    list-style: none
-    padding-left: 0
+
+#songs
+  background-color: $color-3
+  max-height: calc(100% - 3em)
+  overflow-x: visible
+  overflow-y: auto
+  list-style: none
+  padding-left: 0
 
 #list-player-holder
   height: calc(100% - 3em)
@@ -531,8 +533,6 @@ button
   #container.container-collapse
     width: calc(100% - 20em)
 
-  #song-list
-    height: calc(100% - 1em)
 
   #list-player-holder
     display: flex
@@ -540,11 +540,14 @@ button
     padding: 0.5em 0.5em 0 0.5em
 
   #song-list
-
+    height: calc(100% - 1em)
     display: inline-block
     box-sizing: border-box
     width: 50%
     padding: 0.5em
+
+  #songs
+    max-height: calc(100% - 4em)
 
   #player-container
     display: inline-block
